<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="ott">Open Tag Team</string>
    
    <string name="app_name">Password Generator</string>
    <string name="action_settings">Settings</string>
    <string name="title_section1">Generate</string>
    <string name="title_section2">Settings</string>
    <string name="title_section3">About</string>
    
    <string name="btn_generate">GENERATE</string>
    <string name="txt_description">Press GENERATE to create a new Password</string>
    <string name="alert_title">Warning!</string>
    <string name="alert_msg">This works only if you\'re connected.</string>
    
    <string name="value16">16</string>
    <string name="txt_pw_length">&#160;&#160;Password Length</string>
    <string name="blank4">&#160;&#160;&#160;&#160;</string>
    <string name="scOFF">Special Characters OFF</string>
    <string name="scON">Special Characters ON</string>
    <string name="numOFF">Numbers OFF</string>
    <string name="numON">Numbers ON</string>
    <string name="memorableOFF">Memorable OFF</string>
    <string name="memorableON">Memorable ON</string>
    <string name="internet">(Internet)</string>
    
    <string name="about">Join us to grow ourselves, to become together from novices to experts of this wonderful operating system.\n\nOpen Tag Team is a place for everyone, starting with you.</string>
    <string name="about2">Join us:\n\nhttp://www.facebook.com/OpenTagTeam\n\nhttps://github.com/charbonnier666/OpenTagTeam</string>
    
    <string name="admob_id">ca-app-pub-6205760010010665/1488772745</string>

</resources>
